# spidey-shell

./: Cargo.toml  README.md
src/: ai.rs  lib.rs  main.rs  menu.rs  user_interface.rs
src/assets/: theme.toml
src/elm/: clipboard.rs  events.rs  mod.rs  model.rs  openai.rs  ui.rs
src/elm/chat/: interface.rs  mod.rs
src/openai/: api.rs  history.rs  interface.rs  mod.rs
