[package]
name = "spidey-shell"
version = "0.1.0"
edition = "2021"

include = ["assets/theme.toml"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
copypasta = "0.10.0"
cpal = "0.15.2"
cursive = { version = "0.20.0", features = ["toml"] }
dirs = "5.0.1"
dotenv = "0.15.0"
lazy_static = "1.4.0"
openai-api-rs = "2.1.2"
tokio = {version="1.35.1", features=["full"]}

